--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:theme="@style/Theme.TugasRecyclerView"
         tools:targetApi="31">
         <activity
+            android:name=".NewsDetail"
+            android:exported="false" />
+        <activity
             android:name=".NewsAdd"
             android:exported="false" />
         <activity
