--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,13 +17,22 @@
         android:theme="@style/Theme.TugasRecyclerView"
         tools:targetApi="31">
         <activity
+            android:name=".RegisterActivity"
+            android:exported="false" />
+        <activity
+            android:name=".LoginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="false" />
+        <activity
             android:name=".NewsDetail"
             android:exported="false" />
         <activity
             android:name=".NewsAdd"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".DefaultActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
